--- a/devops/development/docker-compose.yml
+++ b/devops/development/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - intranet
     ports:
       - "81:8080"
+      - "5005:5005"
     environment:
       DB_USER: "${WILDBOOK_DB_USER}"
       DB_PASSWORD: "${WILDBOOK_DB_PASSWORD}"
@@ -59,8 +60,8 @@ services:
       # Admin user created on startup,
       # https://github.com/WildMeOrg/Wildbook/commit/6d65e70e43691f1b281bb76edf151e5c7cdb7403
       # JAVA_OPTS from old-world wildbook, which gives us 4G heap memory
-      JAVA_OPTS: "-Djava.awt.headless=true -Xms4096m -Xmx4096m"
-
+#      JAVA_OPTS: "-Djava.awt.headless=true -Xms4096m -Xmx4096m"
+      JAVA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
   opensearch:
     image: opensearchproject/opensearch:2.15.0
     healthcheck:
